--- a/KnuDbWithEf/KnuDbWithEf.csproj
+++ b/KnuDbWithEf/KnuDbWithEf.csproj
@@ -70,6 +70,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SearchEmployee.cs" />
     <EmbeddedResource Include="EmployeeAddingForm.resx">
       <DependentUpon>EmployeeAddingForm.cs</DependentUpon>
     </EmbeddedResource>
