--- a/KnuDbWithEf/KnuDbWithEf.csproj
+++ b/KnuDbWithEf/KnuDbWithEf.csproj
@@ -73,6 +73,7 @@
       <DependentUpon>AddDepartmentForm.cs</DependentUpon>
     </Compile>
     <Compile Include="AlterEmployee.cs" />
+    <Compile Include="Authorisation.cs" />
     <Compile Include="AuthorisationForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -92,6 +93,12 @@
       <DependentUpon>EmployeeAddingForm.cs</DependentUpon>
     </Compile>
     <Compile Include="EmployeeVisualization.cs" />
+    <Compile Include="MainFormUser.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MainFormUser.Designer.cs">
+      <DependentUpon>MainFormUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -100,6 +107,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Registration.cs" />
     <Compile Include="SearchEmployee.cs" />
     <Compile Include="TransformToXml.cs" />
     <EmbeddedResource Include="AddCathedraForm.resx">
@@ -116,6 +124,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="EmployeeAddingForm.resx">
       <DependentUpon>EmployeeAddingForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MainFormUser.resx">
+      <DependentUpon>MainFormUser.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
